# AOC

./: .gitignore  Cargo.toml  README.md
2021/src/: main.rs  util.rs
2021/src/d/: d3.rs  d6.rs  d7.rs  d8.rs  d9.rs
2022/: .editorconfig  Cargo.toml
2022/benches/: d.rs  d1.rs
2022/src/: util.rs
2022/src/d/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
2023/: Cargo.toml
2023/data/: input_10_sample.txt
2023/src/: d.rs  util.rs
2023/src/d/: d1.rs  d10.rs  d11.rs  d15.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d24.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
2024/: Cargo.toml
2024/src/: d.rs  lib.rs  util.rs
2024/src/d/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d17.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
2025/: Cargo.toml
2025/src/: util.rs
2025/src/d/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs
src/: d.rs  main.rs  util.rs
src/d/: d1.rs  d2.rs  d4.rs  d5.rs  d7.rs  d9.rs  mod.rs
