[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

[dependencies]
unwrap-infallible = "0.1.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "d1"
harness = false
