[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
id_tree = "1.8.0"
itertools = "0.10.5"
nalgebra = "0.31.4"
regex = "1.7.0"
sets = "1.2.0"
unwrap-infallible = "0.1.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "d"
harness = false
