[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
id_tree = "1.8.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
regex = "1.7.0"
sets = "1.2.0"
unwrap-infallible = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"

# [[bench]]
# name = "d"
# harness = false
